Poprawiono: 1. Błąd z tworzeniem PrintStream 2. Zaktualizowano tworzenie URL, poprzednie było akceptowane do wersji 20, zastąpiono to URI. 3. Poprawiono obsługę wyjątków